--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,20 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.10.8"
+python = "3.10.9"
 aiohttp = "^3.8.3"
 async-timeout = "^4.0.2"
 python-dotenv = "^0.21.0"
-py-cord = {git = "https://github.com/Pycord-Development/pycord.git"}
+py-cord = { git = "https://github.com/Pycord-Development/pycord.git" }
 better-profanity = "^0.7.0"
 yarl = "^1.8.2"
 motor = "^3.1.1"
-pymongo = {extras = ["srv"], version = "^4.3.3"}
+pymongo = { extras = ["srv"], version = "^4.3.3" }
+black = "^22.12.0"
 
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
