--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Fansic
 
 on:
   push:
@@ -15,4 +15,15 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag fansic:$(date +%s)
+    - name: Docker Run Action
+      # You may pin to the exact commit or the version.
+      # uses: addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185
+      uses: addnab/docker-run-action@v3
+      with:
+        # Image
+        image: fansic
+        # Options
+        options: # optional
+        # Use a specific shell
+        shell: bash
