--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag fansic:$(date +%s)
+      run: docker build --tag fansic .
     - name: Docker Run Action
       # You may pin to the exact commit or the version.
       # uses: addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185
