--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,14 +16,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build --tag fansic .
-    - name: Docker Run Action
-      # You may pin to the exact commit or the version.
-      # uses: addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185
-      uses: addnab/docker-run-action@v3
-      with:
-        # Image
-        image: fansic
-        # Options
-        options: -e TOKEN=${{secrets.TOKEN}} -e mongo_pwd=${{secrets.MONGO_PWD}}
-        # Use a specific shell
-        shell: bash
+    - name: Run the docker image
+      run: docker run fansic -e TOKEN=${{secrets.TOKEN}} -e mongo_pwd=${{secrets.MONGO_PWD}}
