--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,8 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build --tag fansic .
     - name: Run the docker image
-      run: docker run -e TOKEN=${{secrets.TOKEN}} -e mongo_pwd=${{secrets.MONGO_PWD}} -it fansic
+      run: docker run -e TOKEN=${{secrets.TOKEN}} -e mongo_pwd=${{secrets.MONGO_PWD}} fansic
