--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,18 +2,17 @@ name: Fansic
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Build the Docker image
-      run: docker build --tag fansic .
-    - name: Run the docker image
-      run: docker run -e TOKEN=${{secrets.TOKEN}} -e mongo_pwd=${{secrets.MONGO_PWD}} fansic
+      - uses: actions/checkout@v3
+      - name: Build the Docker image
+        run: docker build --tag fansic .
+      - name: Run the docker image
+        run: docker run -e TOKEN=${{secrets.TOKEN}} -e mongo_pwd=${{secrets.MONGO_PWD}} fansic
